frontend/test/should_fail/different_number_of_rewrite_parts_nested_iterated.grg
pattern p {
	iterated {
		.;
		
		iterated {
			.;
			
			modify {
			}
		}
	}
}
